[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynwis"
version = "0.1.2"
description = "A lightweight Python toolkit for downloading, processing, and filtering USGS NWIS daily water data"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Shahab Shojaee" }
]

keywords = [
    "hydrology", "USGS", "NWIS", "water-data", "streamflow", "sediment",
    "water-quality", "discharge", "pandas", "geoscience", "environmental-data",
    "usgs-nwis", "water-resources", "daily-values", "batch-download",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/Bluerrror/pyNWIS"
Repository = "https://github.com/Bluerrror/pyNWIS"
Issues = "https://github.com/Bluerrror/pyNWIS/issues"
Changelog = "https://github.com/Bluerrror/pyNWIS/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["pynwis*"]